--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://lidor:Lidor4001@movietheater.iiyteid.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://lidor_admin:<password>@cluster0.cexry64.mongodb.net/?retryWrites=true&w=majority
